<resources>
    <string name="app_name">Home Page</string>
    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="height3">Height</string>
    <string name="weight2">Weight</string>
    <string name="height2">Height : </string>
    <string name="weight1">Weight : </string>
    <string name="age1">Age : </string>
    <string name="value">BMI Value :</string>
    <string name="btn_save">calculate</string>
    <string name="btn_reset">reset</string>
    <string name="txt_drink_water_plan">text</string>
    <string name="r1">text</string>
    <string name="txt_drinked_water">text</string>
    <string name="tex_L">text</string>
    <string name="btn_add">add</string>
    <string name="water_plan">Water Plan</string>
    <string name="drinked_water">Drinked Water : </string>
    <string name="l">L</string>
    <string name="btnedit">Edit</string>
    <string name="btnreset">RESET</string>
    <string name="txt_time">Time : </string>
    <string name="btncalculate">CALCULATE</string>
    <string name="btnview">VIEW</string>
    <string name="btn_update">Edit your feedback</string>
    <string name="btn_dlt">Delete your feedback</string>
    <string name="btn_view">View all feedbacks</string>
    <string name="txt_feedbacks">Feedbacks !</string>
    <string name="et_age">Enter your age</string>
    <string name="rd_btn_M">Maximum Heart Rate</string>
    <string name="rd_btn_B">MHR Before Adding Your Age</string>
    <string name="btn_calculate">Calculate</string>
    <string name="rd_btn_m">Get yout maximum heart rate</string>
    <string name="rd_btn_b">Maximum Heart Rate a person can have</string>
    <string name="rd_btn_mm">Check your Maximum Heart Rate</string>
    <string name="txt_calc">Maximum Heart Rate Calculator</string>

</resources>