<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1E8E4">

    <EditText
        android:id="@+id/et_age"
        android:layout_width="233dp"
        android:layout_height="53dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/et_age"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_age">

        <RadioButton
            android:id="@+id/rd_btn_M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_btn_mm"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rd_btn_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_btn_b"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:onClick="calculateAnswer"
        android:text="@string/btn_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:layout_marginEnd="7dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_calculate" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="340dp"
        android:layout_height="295dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
        app:srcCompat="@drawable/calculate" />

    <TextView
        android:id="@+id/txt_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/antic_slab"
        android:text="@string/txt_calc"
        android:textColor="#100F0F"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>