<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AED6F1">

    <RelativeLayout
        android:id="@+id/water"
        android:layout_width="450dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/transparency">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:paddingStart="20dp"
            android:text="@string/water_plan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:background="#AED6F1">

        <TextView
            android:id="@+id/currentw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:paddingStart="90dp"
            android:text="@string/drinked_water"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/neww"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/l"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/neww"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/raleway"
            android:paddingStart="176dp"
            android:text="@string/txt_time"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/neww"
            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="30sp" />


    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/add"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:text="ADD"
        android:layout_below="@+id/weight"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="#EE294E"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/edit"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/add"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="#EE294E"
        android:text="@string/btnedit"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/reset"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/edit"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="#EE294E"
        android:text="@string/btnreset"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/view"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_below="@+id/reset"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="#EE294E"
        android:text="@string/btnview"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>

</RelativeLayout>