<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:background="#C179D0 "
    tools:context=".bmiactivity">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contentlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:src="@drawable/ok">

    </ImageView>


    <RelativeLayout
        android:id="@+id/contentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/cardbackgroung"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="180dp"
            android:text="@string/age1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/agedisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="130dp"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/agedisplay"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:text="@string/weight1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/agedisplay"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="280dp"
            android:text="@string/height2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/heightdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/agedisplay"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="15dp"
            android:text="@string/weight2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weightdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/agedisplay"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="210dp"
            android:text="@string/height3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmivalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heightdisplay"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:text="@string/value"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmidisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmivalue"
            android:layout_centerHorizontal="true"
            android:background="@color/trans"
            android:text="22"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/genderdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmidisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Gender"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmicategorydispaly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderdisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="Your BMI Category Is"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <android.widget.Button
        android:id="@+id/gotomain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/contentlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/raleway"
        android:text="RECALCULATE YOUR BMI"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold">

    </android.widget.Button>



</RelativeLayout>