<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0C4DE"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="   Add your feed back here . . . "
        android:textColor="#030304"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texttitle"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColor="#0B0A0A"
        android:textColorHint="#716F6F"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:hint="Date"
        android:inputType="date"
        android:textColor="#050505"
        android:textColorHint="#716F6F"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:hint="Feedback"
        android:inputType="text"
        android:textColor="#090909"
        android:textColorHint="#716F6F"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@id/feedback"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="add your feedback"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@id/btnInsert"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="12dp"
        android:background="#1558DF"
        android:backgroundTint="@color/black"
        android:text="@string/btn_update"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@id/btnUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/btn_dlt"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@id/btnDelete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/btn_view"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="@string/txt_feedbacks"
        android:textColor="#090909"
        android:textSize="48sp"
        android:textStyle="bold" />

</RelativeLayout>